src/style/global.scss
// Full-height content
html,
body {
  height: 100%;
}

body {
  background: $primary;
  color: $neutral-light;
}

h1 { font-size: $h1-font-size; }
h2 { font-size: $h2-font-size; }
h3 { font-size: $h3-font-size; }
h4 { font-size: $h4-font-size; }
h5 { font-size: $h5-font-size; }
h6 { font-size: $h6-font-size; }

